--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,27 +1,13 @@
-<html>
-    <head>
-        <title>Django Girls Blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href=" ">Django Girls Blog</a></h1>
-        </div>
-{% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href=" ">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
             </div>
-    
-{% endfor %}
-<!--
-
-
-        <div>
-            <p>pulished 14.06.2014, 12:14</p>
-            <h2><a href=" ">My second post</a></h2>
-            <p>Secondo post</p>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
--->
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
