--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,32 +1,24 @@
 {% load staticfiles %}
 <html>
     <head>
+        <title>Django Girls Blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <title>Django Girls Blog</title>
     </head>
     <body>
         <div class="page-header">
-            <h1><a href=" ">Django Girls Blog</a></h1>
+            {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon-plus"></span></a>
+            {% endif %}
+            <h1><a href="/">Django Girls Blog</a></h1>
         </div>
         <div class="content container">
           <div class="row">
             <div class="col-md-8">
             {% block content %}
             {% endblock %}
-<!--
-                {% for post in posts %}
-                    <div class="post">
-                        <div class="date">
-                            {{ post.published_date }}
-                        </div>
-                        <h1><a href="">{{ post.title }}</a></h1>
-                        <p>{{ post.text|linebreaksbr }}</p>
-                    </div>
-                {% endfor %}
--->                
             </div>
           </div>
         </div>
